--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -1,14 +1,13 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <h1><a href="/">Josh Sanz</a></h1>
+      <h1><a href="/">Josh Sanz, Ph.D.</a></h1>
       <p class="lead">UC Berkeley EECS</p>
     </div>
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item {{ispage index.html}}active{{end}}" href="/">Home</a>
       <a class="sidebar-nav-item {{ispage research/*}}active{{end}}" href="/research/">Research</a>
       <a class="sidebar-nav-item {{ispage teaching/*}}active{{end}}" href="/teaching/">Teaching</a>
-      <a class="sidebar-nav-item {{ispage about/*}}active{{end}}" href="/about/">About Me</a>
     </nav>
     <p>&copy; {{fill author}}.</p>
   </div>
