--- a/_css/poole_hyde.css
+++ b/_css/poole_hyde.css
@@ -358,3 +358,20 @@ a.sidebar-nav-item:focus {
     margin-right: 2rem;
   }
 }
+
+
+.img-rounded img {
+  max-width: 100%;
+  max-height: 100%;
+  padding-left: 0px;
+  margin: auto;
+  display: block;
+  border-radius: 30px;
+}
+
+.container-grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
